UPDATE: index out of bounds error
Co-authored-by: andregroseth <lord.andre.groseth@nav.no>